--- a/docs/config.toml
+++ b/docs/config.toml
@@ -5,6 +5,7 @@ languageCode = "en-us"
 defaultContentLanguage = "en"
 enableRobotsTXT = true
 disableKinds=["RSS"]
+publishDir = "docs"
 
 [params]
   description = '<!--[-->Software Developer & Product Manager<!--]--><br />
